# serializer version: 1
# name: test_snapshot[ort_all_nodes_one_ep.log]
  dict({
    'artifact_path': 'ort_all_nodes_one_ep.log',
    'backend': 'onnxruntime',
    'facts': list([
      dict({
        'data': dict({
          'graph_nodes': 49,
          'partitions': 1,
          'provider': 'CoreMLExecutionProvider',
          'short_name': 'CoreML',
          'supported': 49,
          'unsupported': 0,
        }),
        'excerpt': '2026-08-03 12:23:43.094 python3[74295:3643341] 2026-08-03 12:23:43.094675 [I:onnxruntime:, coreml_execution_provider.cc:139 GetCapability] CoreMLExecutionProvider::GetCapability, number of partitions supported by CoreML: 1 number of nodes in the graph: 49 number of nodes supported by CoreML: 49',
        'id': 'f1',
        'kind': 'provider_capability',
        'source': 'ort_all_nodes_one_ep.log:73',
        'summary': 'CoreMLExecutionProvider claimed 49/49 nodes across 1 partition(s)',
      }),
      dict({
        'data': dict({
          'modified': '0',
        }),
        'excerpt': '2026-08-03 12:23:43.511 python3[74295:3643341] 2026-08-03 12:23:43.511522 [I:onnxruntime:, graph_transformer.cc:15 Apply] GraphTransformer MemcpyTransformer modified: 0 with status: OK',
        'id': 'f2',
        'kind': 'memcpy_transformer',
        'source': 'ort_all_nodes_one_ep.log:202',
        'summary': 'MemcpyTransformer made no changes (no cross-provider copies needed)',
      }),
      dict({
        'data': dict({
          'count': 1,
          'provider': 'CoreMLExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.511 python3[74295:3643341] 2026-08-03 12:23:43.511564 [V:onnxruntime:, session_state.cc:1350 VerifyEachNodeIsAssignedToAnEp]  All nodes placed on [CoreMLExecutionProvider]. Number of nodes: 1',
        'id': 'f3',
        'kind': 'all_nodes_one_provider',
        'source': 'ort_all_nodes_one_ep.log:204',
        'summary': 'All 1 node group(s) placed on CoreMLExecutionProvider (single partition)',
      }),
      dict({
        'data': dict({
          'providers': list([
            'CoreMLExecutionProvider',
            'CPUExecutionProvider',
          ]),
        }),
        'excerpt': 'SESSION_PROVIDERS: CoreMLExecutionProvider,CPUExecutionProvider',
        'id': 'f4',
        'kind': 'session_providers',
        'source': 'ort_all_nodes_one_ep.log:211',
        'summary': 'Session initialized with: CoreMLExecutionProvider,CPUExecutionProvider',
      }),
    ]),
  })
# ---
# name: test_snapshot[ort_cpu_only.log]
  dict({
    'artifact_path': 'ort_cpu_only.log',
    'backend': 'onnxruntime',
    'facts': list([
      dict({
        'data': dict({
          'modified': '0',
        }),
        'excerpt': '2026-08-03 12:23:43.896 python3[74305:3643426] 2026-08-03 12:23:43.896252 [I:onnxruntime:, graph_transformer.cc:15 Apply] GraphTransformer MemcpyTransformer modified: 0 with status: OK',
        'id': 'f1',
        'kind': 'memcpy_transformer',
        'source': 'ort_cpu_only.log:108',
        'summary': 'MemcpyTransformer made no changes (no cross-provider copies needed)',
      }),
      dict({
        'data': dict({
          'count': 24,
          'provider': 'CPUExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.896 python3[74305:3643426] 2026-08-03 12:23:43.896276 [V:onnxruntime:, session_state.cc:1350 VerifyEachNodeIsAssignedToAnEp]  All nodes placed on [CPUExecutionProvider]. Number of nodes: 24',
        'id': 'f2',
        'kind': 'all_nodes_one_provider',
        'source': 'ort_cpu_only.log:110',
        'summary': 'All 24 node group(s) placed on CPUExecutionProvider (single partition)',
      }),
      dict({
        'data': dict({
          'providers': list([
            'CPUExecutionProvider',
          ]),
        }),
        'excerpt': 'SESSION_PROVIDERS: CPUExecutionProvider',
        'id': 'f3',
        'kind': 'session_providers',
        'source': 'ort_cpu_only.log:117',
        'summary': 'Session initialized with: CPUExecutionProvider',
      }),
    ]),
  })
# ---
# name: test_snapshot[ort_missing_provider.log]
  dict({
    'artifact_path': 'ort_missing_provider.log',
    'backend': 'onnxruntime',
    'facts': list([
      dict({
        'data': dict({
          'available': list([
            'CoreMLExecutionProvider',
            'AzureExecutionProvider',
            'CPUExecutionProvider',
          ]),
          'requested': 'TensorrtExecutionProvider',
        }),
        'excerpt': "/Users/chenkait/personal/edgedoctor/.venv/lib/python3.12/site-packages/onnxruntime/capi/onnxruntime_inference_collection.py:147: UserWarning: Specified provider 'TensorrtExecutionProvider' is not in available provider names.Available providers: 'CoreMLExecutionProvider, AzureExecutionProvider, CPUExecutionProvider'",
        'id': 'f1',
        'kind': 'provider_unavailable',
        'source': 'ort_missing_provider.log:1',
        'summary': 'Requested provider TensorrtExecutionProvider is NOT available in this onnxruntime build',
      }),
      dict({
        'data': dict({
          'modified': '0',
        }),
        'excerpt': '2026-08-03 12:23:43.996 python3[74306:3643437] 2026-08-03 12:23:43.996904 [I:onnxruntime:, graph_transformer.cc:15 Apply] GraphTransformer MemcpyTransformer modified: 0 with status: OK',
        'id': 'f2',
        'kind': 'memcpy_transformer',
        'source': 'ort_missing_provider.log:110',
        'summary': 'MemcpyTransformer made no changes (no cross-provider copies needed)',
      }),
      dict({
        'data': dict({
          'count': 24,
          'provider': 'CPUExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.996 python3[74306:3643437] 2026-08-03 12:23:43.996928 [V:onnxruntime:, session_state.cc:1350 VerifyEachNodeIsAssignedToAnEp]  All nodes placed on [CPUExecutionProvider]. Number of nodes: 24',
        'id': 'f3',
        'kind': 'all_nodes_one_provider',
        'source': 'ort_missing_provider.log:112',
        'summary': 'All 24 node group(s) placed on CPUExecutionProvider (single partition)',
      }),
      dict({
        'data': dict({
          'providers': list([
            'CPUExecutionProvider',
          ]),
        }),
        'excerpt': 'SESSION_PROVIDERS: CPUExecutionProvider',
        'id': 'f4',
        'kind': 'session_providers',
        'source': 'ort_missing_provider.log:119',
        'summary': 'Session initialized with: CPUExecutionProvider',
      }),
      dict({
        'data': dict({
          'actual': list([
            'CPUExecutionProvider',
          ]),
          'requested': 'TensorrtExecutionProvider',
        }),
        'excerpt': "/Users/chenkait/personal/edgedoctor/.venv/lib/python3.12/site-packages/onnxruntime/capi/onnxruntime_inference_collection.py:147: UserWarning: Specified provider 'TensorrtExecutionProvider' is not in available provider names.Available providers: 'CoreMLExecutionProvider, AzureExecutionProvider, CPUExecutionProvider'",
        'id': 'f5',
        'kind': 'silent_cpu_only',
        'source': 'ort_missing_provider.log:1',
        'summary': 'Requested TensorrtExecutionProvider was unavailable, so the session ran entirely on CPU',
      }),
    ]),
  })
# ---
# name: test_snapshot[ort_partial_fallback.log]
  dict({
    'artifact_path': 'ort_partial_fallback.log',
    'backend': 'onnxruntime',
    'facts': list([
      dict({
        'data': dict({
          'graph_nodes': 5,
          'partitions': 2,
          'provider': 'CoreMLExecutionProvider',
          'short_name': 'CoreML',
          'supported': 3,
          'unsupported': 2,
        }),
        'excerpt': '2026-08-03 12:23:43.718 python3[74302:3643404] 2026-08-03 12:23:43.718138 [W:onnxruntime:, coreml_execution_provider.cc:137 GetCapability] CoreMLExecutionProvider::GetCapability, number of partitions supported by CoreML: 2 number of nodes in the graph: 5 number of nodes supported by CoreML: 3',
        'id': 'f1',
        'kind': 'provider_capability',
        'source': 'ort_partial_fallback.log:31',
        'summary': 'CoreMLExecutionProvider claimed 3/5 nodes across 2 partition(s)',
      }),
      dict({
        'data': dict({
          'modified': '0',
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787592 [I:onnxruntime:, graph_transformer.cc:15 Apply] GraphTransformer MemcpyTransformer modified: 0 with status: OK',
        'id': 'f2',
        'kind': 'memcpy_transformer',
        'source': 'ort_partial_fallback.log:74',
        'summary': 'MemcpyTransformer made no changes (no cross-provider copies needed)',
      }),
      dict({
        'data': dict({
          'count': 2,
          'provider': 'CoreMLExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787613 [V:onnxruntime:, session_state.cc:1353 VerifyEachNodeIsAssignedToAnEp]  Node(s) placed on [CoreMLExecutionProvider]. Number of nodes: 2',
        'id': 'f3',
        'kind': 'node_placement',
        'source': 'ort_partial_fallback.log:76',
        'summary': '2 node group(s) placed on CoreMLExecutionProvider',
      }),
      dict({
        'data': dict({
          'count': 2,
          'provider': 'CPUExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787635 [V:onnxruntime:, session_state.cc:1353 VerifyEachNodeIsAssignedToAnEp]  Node(s) placed on [CPUExecutionProvider]. Number of nodes: 2',
        'id': 'f4',
        'kind': 'node_placement',
        'source': 'ort_partial_fallback.log:79',
        'summary': '2 node group(s) placed on CPUExecutionProvider',
      }),
      dict({
        'data': dict({
          'node': 'Erf_0',
          'op': 'Erf',
          'provider': 'CPUExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787644 [V:onnxruntime:, session_state.cc:1355 VerifyEachNodeIsAssignedToAnEp]   Erf (Erf_0)',
        'id': 'f5',
        'kind': 'node_on_provider',
        'source': 'ort_partial_fallback.log:80',
        'summary': "Node 'Erf_0' (op Erf) runs on CPUExecutionProvider",
      }),
      dict({
        'data': dict({
          'node': 'Round_0',
          'op': 'Round',
          'provider': 'CPUExecutionProvider',
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787652 [V:onnxruntime:, session_state.cc:1355 VerifyEachNodeIsAssignedToAnEp]   Round (Round_0)',
        'id': 'f6',
        'kind': 'node_on_provider',
        'source': 'ort_partial_fallback.log:81',
        'summary': "Node 'Round_0' (op Round) runs on CPUExecutionProvider",
      }),
      dict({
        'data': dict({
          'providers': list([
            'CoreMLExecutionProvider',
            'CPUExecutionProvider',
          ]),
        }),
        'excerpt': 'SESSION_PROVIDERS: CoreMLExecutionProvider,CPUExecutionProvider',
        'id': 'f7',
        'kind': 'session_providers',
        'source': 'ort_partial_fallback.log:88',
        'summary': 'Session initialized with: CoreMLExecutionProvider,CPUExecutionProvider',
      }),
      dict({
        'data': dict({
          'accelerators': list([
            'CoreMLExecutionProvider',
          ]),
          'cpu_node_groups': 2,
          'providers': list([
            'CPUExecutionProvider',
            'CoreMLExecutionProvider',
          ]),
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787613 [V:onnxruntime:, session_state.cc:1353 VerifyEachNodeIsAssignedToAnEp]  Node(s) placed on [CoreMLExecutionProvider]. Number of nodes: 2',
        'id': 'f8',
        'kind': 'split_execution',
        'source': 'ort_partial_fallback.log:76',
        'summary': 'Graph split across 2 providers: CPUExecutionProvider, CoreMLExecutionProvider — 2 group(s) fell back to CPU',
      }),
      dict({
        'data': dict({
          'count': 2,
          'first_op': 'Erf',
          'ops': list([
            'Erf',
            'Round',
          ]),
        }),
        'excerpt': '2026-08-03 12:23:43.787 python3[74302:3643404] 2026-08-03 12:23:43.787644 [V:onnxruntime:, session_state.cc:1355 VerifyEachNodeIsAssignedToAnEp]   Erf (Erf_0)',
        'id': 'f9',
        'kind': 'cpu_fallback_ops',
        'source': 'ort_partial_fallback.log:80',
        'summary': '2 op(s) ran on CPU despite an accelerator being available: Erf, Round',
      }),
    ]),
  })
# ---
